@@ -5,9 +5,9 @@ import java.util.Arrays;
 //  Task description on https://www.codewars.com/kata/55983863da40caa2c900004e
 public class Number {
     public static long nextBiggerNumber(long n) {
-        int[] digits = Long.toString(n).chars().map(c -> c - '0').toArray();
+        char[] digits = Long.toString(n).toCharArray();
         int i = digits.length - 1;
-        int[] changingDigits;
+        int j;
 
         do {
             i--;
@@ -16,20 +16,17 @@ public class Number {
         if (i <= -1)
             return -1;
 
-        changingDigits = Arrays.copyOfRange(digits, i + 1, digits.length);
-        Arrays.sort(changingDigits);
+        j = i;
 
-        for (int j = 0; j < changingDigits.length; j++) {
-            if (changingDigits[j] > digits[i]) {
-                int temp = digits[i];
-                digits[i] = changingDigits[j];
-                changingDigits[j] = temp;
-                Arrays.sort(changingDigits);
-                break;
-            }
+        while (j + 1 < digits.length && digits[j + 1] > digits[i]) {
+            j++;
         }
-        System.arraycopy(changingDigits, 0, digits, i + 1, changingDigits.length);
 
-        return new Long(Arrays.toString(digits).replaceAll("\\[|\\]|,|\\s", ""));
+        char temp = digits[i];
+        digits[i] = digits[j];
+        digits[j] = temp;
+
+        Arrays.sort(digits, i + 1, digits.length);
+        return Long.valueOf(new String(digits));
     }
 }
